Bug 96600 - UI: Ruler shows wrong active column if columns are LTR, and paragraph is RTL
Summary: UI: Ruler shows wrong active column if columns are LTR, and paragraph is RTL
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks: RTL-UI
  Show dependency treegraph
 
Reported: 2015-12-19 17:02 UTC by Mike Kaganski
Modified: 2024-08-03 07:23 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike Kaganski 2015-12-19 17:02:47 UTC
1. Create new Writer document
2. Insert->Section->Columns->2, LTR
3. Add some text to columns to be able to select them
4. Select all, Format->Paragraph->Text Direction: RTL

Selecting left column, the indents and tabs are shown in right ruler section, and vice versa.
Comment 1 Mike Kaganski 2015-12-19 17:08:59 UTC
Commited patch to gerrit: https://gerrit.libreoffice.org/20820
Comment 2 Commit Notification 2016-01-18 08:59:56 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b53d426b6faad82f98a26f8a4860218f03691b66

tdf#96600: use frame RTL property for determining active ruler column

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.