tdf#96600: use frame RTL property for determining active ruler column

Text direction doesn't necessarily coincide with it

Change-Id: I768208d6c4109d2ccd4fc9e6824f8dbd8eabe76b
Reviewed-on: https://gerrit.libreoffice.org/20820
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>